# chroma-keying-cpp

./: README.md
chroma/: CMakeLists.txt  chroma.cpp  image.cpp  image.hpp  matrix.hpp
fotos_de_prueba/: .MATLABDriveTag
fotos_de_prueba/con_croma/: .MATLABDriveTag
fotos_de_prueba/fondos/: .MATLABDriveTag
fotos_de_prueba/sin_croma/: .MATLABDriveTag
